output/akutarnft_p5_25_124/foundry_validation/F-001_Project_funds_can_be_permanently_locked/forge_stdout_attempt3.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:25:36:
   |
25 |     address public constant WETH = 0xC02aaA39b223FE8D0A0E5C4F27eAD9083C756Cc2;
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

